Fix basePage-legacy-5-5 to include langVisibility.css like 5.6 does

--- a/src/content/bookLayout/basePage-legacy-5-5.less
+++ b/src/content/bookLayout/basePage-legacy-5-5.less
@@ -1677,4 +1677,24 @@ body[data-bfnomargin*="video"][data-media*="video"][data-bfnomargin*="portrait"]
     border-bottom: solid green;
 }
 
-/*# sourceMappingURL=basePage.css.map */
+/* start of langVisibility.css */
+.bloom-editable.bloom-visibility-code-on {
+    display: block;
+}
+
+.bloom-editable.bloom-visibility-user-on {
+    display: block;
+}
+
+.bloom-editable.bloom-visibility-user-off {
+    display: none !important;
+}
+
+.bloom-vertical-align-center .bloom-editable.bloom-visibility-code-on,
+.bloom-vertical-align-bottom .bloom-editable.bloom-visibility-code-on,
+.bloom-vertical-align-center .bloom-editable.bloom-visibility-user-on,
+.bloom-vertical-align-bottom .bloom-editable.bloom-visibility-user-on {
+    display: flex;
+}
+
+/* end of langVisibility.css */
